banner and projects components created with styles and the application are finished

--- a/personal-portafolio/src/App.css
+++ b/personal-portafolio/src/App.css
@@ -17,6 +17,11 @@
 
 /*Default css*/
 
+.App{
+  width: 100%;
+  margin: 0px;
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -235,9 +240,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -280,8 +284,8 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /**** banner css ****/
 
 .banner {
-  margin-top: 0;
-  padding: 260px 0 100px 0;
+  margin-top: 0px;
+  padding: 180px 0 100px 0;
   background-image: url('./assets/img/banner-bg.png');
   background-position: top center;
   background-size: cover;
@@ -298,10 +302,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: inline-block;
 }
 .banner h1 {
-  font-size: 65px;
+  font-size: 60px;
   font-weight: 700;
   letter-spacing: 0.8px;
-  line-height: 1;
+  line-height: 1.2;
   margin-bottom: 20px;
   display: block;
 }
@@ -345,6 +349,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     }
 }
 .txt-rotate > .wrap {
+
   border-right: 0.08em solid #666;
 }
 
@@ -406,11 +411,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   letter-spacing: 0.8px;
   line-height: 1.5em;
   margin: 14px auto 30px auto;
-  margin-top: 30px;
   text-align: center;
   width: 56%;
 }
-
 .project .nav.nav-pills {
   width: 72%;
   margin: 0 auto;
